; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_lagarith.c_lag_decode_prob.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_lagarith.c_lag_decode_prob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lag_decode_prob.series = internal constant [7 x i32] [i32 1, i32 2, i32 3, i32 5, i32 8, i32 13, i32 21], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @lag_decode_prob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lag_decode_prob(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %38, %2
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 7
  br i1 %13, label %14, label %41

14:                                               ; preds = %11
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  br label %41

21:                                               ; preds = %17, %14
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %9, align 4
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @get_bits1(i32* %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %37

27:                                               ; preds = %21
  %28 = load i32, i32* %9, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %37, label %30

30:                                               ; preds = %27
  %31 = load i32, i32* %6, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds [7 x i32], [7 x i32]* @lag_decode_prob.series, i64 0, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %8, align 4
  %36 = add nsw i32 %35, %34
  store i32 %36, i32* %8, align 4
  br label %37

37:                                               ; preds = %30, %27, %21
  br label %38

38:                                               ; preds = %37
  %39 = load i32, i32* %6, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %6, align 4
  br label %11

41:                                               ; preds = %20, %11
  %42 = load i32, i32* %8, align 4
  %43 = add nsw i32 %42, -1
  store i32 %43, i32* %8, align 4
  %44 = load i32, i32* %8, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %41
  %47 = load i32, i32* %8, align 4
  %48 = icmp sgt i32 %47, 31
  br i1 %48, label %49, label %51

49:                                               ; preds = %46, %41
  %50 = load i32*, i32** %5, align 8
  store i32 0, i32* %50, align 4
  store i32 -1, i32* %3, align 4
  br label %68

51:                                               ; preds = %46
  %52 = load i32, i32* %8, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %51
  %55 = load i32*, i32** %5, align 8
  store i32 0, i32* %55, align 4
  store i32 0, i32* %3, align 4
  br label %68

56:                                               ; preds = %51
  br label %57

57:                                               ; preds = %56
  %58 = load i32*, i32** %4, align 8
  %59 = load i32, i32* %8, align 4
  %60 = call i32 @get_bits_long(i32* %58, i32 %59)
  store i32 %60, i32* %10, align 4
  %61 = load i32, i32* %8, align 4
  %62 = shl i32 1, %61
  %63 = load i32, i32* %10, align 4
  %64 = or i32 %63, %62
  store i32 %64, i32* %10, align 4
  %65 = load i32, i32* %10, align 4
  %66 = sub i32 %65, 1
  %67 = load i32*, i32** %5, align 8
  store i32 %66, i32* %67, align 4
  store i32 0, i32* %3, align 4
  br label %68

68:                                               ; preds = %57, %54, %49
  %69 = load i32, i32* %3, align 4
  ret i32 %69
}

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i32 @get_bits_long(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
